--- a/project/client/templates/footer.html
+++ b/project/client/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <small>
-      <span>© <a href="mailto:michael@realpython.com">Michael Herman</a></span>
+      <span>© <a href="mailto:">Eric Barbour</a></span>
     </small>
   </div>
 </footer>
